improved show more functionality so that streaming section no longer hinders visibility

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -37,7 +37,7 @@
   }
 
   .navbar-brand {
-    font-size: 1.2rem;
+    font-size: 1.15rem;
   }
 
   .navbar-links {
